[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/Turtle.tscn" type="PackedScene" id=2]
[ext_resource path="res://background.png" type="Texture" id=3]
[ext_resource path="res://level/Music.ogg" type="AudioStream" id=4]
[ext_resource path="res://seahorse/SeaHorse.tscn" type="PackedScene" id=5]
[ext_resource path="res://level/Level.gd" type="Script" id=6]
[ext_resource path="res://cart/Cart.tscn" type="PackedScene" id=7]
[ext_resource path="res://menu/button-attack.png" type="Texture" id=8]
[ext_resource path="res://menu/button-block.png" type="Texture" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Attack" type="TextureButton" parent="Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 372.033
margin_top = -76.3176
margin_right = 553.033
margin_bottom = 1.68243
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defense" type="TextureButton" parent="Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 159.815
margin_top = -76.0276
margin_right = 340.815
margin_bottom = 1.97241
texture_normal = ExtResource( 9 )

[node name="Mushroom" parent="." instance=ExtResource( 1 )]
position = Vector2( 185.242, 281.986 )

[node name="Turtle" parent="." instance=ExtResource( 2 )]
position = Vector2( 526.012, 286.545 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Seahorse" parent="." instance=ExtResource( 5 )]
rotation = 0.014717

[node name="Cart" parent="." instance=ExtResource( 7 )]
position = Vector2( 719.075, 221.284 )
rotation = 0.014717
[connection signal="pressed" from="Background/Attack" to="Mushroom" method="shoot_offense"]
[connection signal="pressed" from="Background/Defense" to="Mushroom" method="shoot_defense"]
[connection signal="player_died" from="Mushroom" to="." method="_on_player_died"]
[connection signal="turtle_died" from="Turtle" to="." method="_on_turtle_died"]
